# Automated-Waste-Management-System-using-ROS2

./: README.md
big_bazu/: package.xml
big_bazu/big_bazu/: test_move.py  trajectory_gen.py  waste_client.py
big_bazu/urdf/: my_robot.urdf
my_interfaces/: CMakeLists.txt  package.xml
my_interfaces/msg/: Image.msg
my_interfaces/srv/: Classification.srv
my_robot/: setup.py
my_robot/launch/: controller.launch.py  gazebo.launch.py
my_robot/my_robot/: image_save.py  inverse_kinematics_solution.py  movement.py  waste_server.py
